cppcheck_report.txt
Exercise-1/headers/Interfaces/Animal.hpp:13:14: performance:inconclusive: Technically the member function 'Animal::crash' can be static (but you may consider moving to unnamed namespace). [functionStatic]
        void crash();
             ^
Exercise-1/src/Interfaces/Animal.cpp:13:14: note: Technically the member function 'Animal::crash' can be static (but you may consider moving to unnamed namespace).
void Animal::crash()
             ^
Exercise-1/headers/Interfaces/Animal.hpp:13:14: note: Technically the member function 'Animal::crash' can be static (but you may consider moving to unnamed namespace).
        void crash();
             ^
Exercise-1/tests/unitTestAnimal.cpp:19:1: error: syntax error [syntaxError]
TEST(MockCatTest,SleepingFunction) {
^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingInclude]

